[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/1x1.png" type="Texture" id=1]
[ext_resource path="res://Assets/fonts/Planes_ValMore.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Final.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 19
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 17
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 17
font_data = ExtResource( 2 )

[node name="Final" type="Node2D"]
script = ExtResource( 3 )

[node name="Final" type="Sprite" parent="."]
modulate = Color( 0.223529, 0.490196, 0.0392157, 1 )
position = Vector2( 150, 150 )
scale = Vector2( 300, 300 )
texture = ExtResource( 1 )

[node name="borda" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 3, 150 )
scale = Vector2( 6, 300 )
texture = ExtResource( 1 )

[node name="borda2" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 297, 150 )
scale = Vector2( 6, 300 )
texture = ExtResource( 1 )

[node name="borda3" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 150, 3 )
scale = Vector2( 300, 6 )
texture = ExtResource( 1 )

[node name="borda4" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 150, 297 )
scale = Vector2( 300, 6 )
texture = ExtResource( 1 )

[node name="EndGame" type="Label" parent="."]
margin_left = 88.7668
margin_top = 24.6945
margin_right = 224.767
margin_bottom = 55.6945
custom_fonts/font = SubResource( 1 )
text = "End Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alerta" type="Label" parent="."]
visible = false
margin_left = -4.58591
margin_top = 299.401
margin_right = 317.414
margin_bottom = 330.401
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Only 1 score per name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 87.0123
margin_top = 76.4773
margin_right = 167.012
margin_bottom = 107.477
custom_fonts/font = SubResource( 2 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="."]
margin_left = 25.9573
margin_top = 139.559
margin_right = 105.957
margin_bottom = 170.559
custom_fonts/font = SubResource( 2 )
text = "Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pontuation" type="RichTextLabel" parent="."]
margin_left = 186.0
margin_top = 78.0
margin_right = 256.0
margin_bottom = 111.0
custom_fonts/normal_font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Public" type="Button" parent="."]
margin_left = 63.7568
margin_top = 190.271
margin_right = 252.757
margin_bottom = 226.271
custom_fonts/font = SubResource( 4 )
text = "Publish Pontuation "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 164.0
margin_top = 250.0
margin_right = 295.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 5 )
text = "Back to Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 139.0
margin_top = 143.0
margin_right = 277.0
margin_bottom = 170.0
minimap_width = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 54.0
margin_top = 94.0
margin_right = 262.0
margin_bottom = 219.0
window_title = "Error!"
dialog_text = "

   Try again in a few seconds."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current" type="Label" parent="."]
visible = false
margin_left = 52.4594
margin_top = 104.892
margin_right = 221.459
margin_bottom = 143.892
custom_fonts/font = SubResource( 6 )
text = "Current position 
if published:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="position" type="RichTextLabel" parent="."]
visible = false
margin_left = 206.0
margin_top = 115.0
margin_right = 270.0
margin_bottom = 139.0
custom_fonts/normal_font = SubResource( 7 )
text = "1*"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Public" to="." method="_on_Public_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
